--- a/specs/build.gradle
+++ b/specs/build.gradle
@@ -23,7 +23,7 @@ repositories {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.5:indy'
     compile 'org.spockframework:spock-core:1.1-groovy-2.4-SNAPSHOT'
-    compile 'com.electriccloud:commander-spec-tests:latest.release'
+    compile 'com.electriccloud:ec-specs-plugins-core:1.9.1'
     compile 'com.jayway.restassured:rest-assured:2.4.0'
     compile 'org.apache.ant:ant:1.9.4'
 
