--- a/specs/build.gradle
+++ b/specs/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.jayway.restassured:rest-assured:2.4.0'
     compile 'org.apache.ant:ant:1.9.4'
 
+    compile 'xom:xom:1.2.5'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'net.rcarz', name: 'jira-client', version: '0.5'
     compile group: 'org.apache.camel', name: 'camel-xmljson', version: '2.22.1'
