--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -8,5 +8,6 @@
   <help>help.xml</help>
   <key>EC-DslDeploy</key>
   <label>EC-DslDeploy</label>
-  <version>2.2.1</version>
+  <ecSupportLevel>10</ecSupportLevel>
+  <version>3.0.0</version>
 </plugin>
