--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -9,5 +9,6 @@
   <key>EC-DslDeploy</key>
   <label>EC-DslDeploy</label>
   <ecSupportLevel>10</ecSupportLevel>
-  <version>3.0.1</version>
+  <version>3.0.2</version>
+  <hasAdoc>true</hasAdoc>
 </plugin>
