--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -2,14 +2,15 @@
   <author>CloudBees</author>
   <authorUrl>http://www.electric-cloud.com/support</authorUrl>
   <category>Utility</category>
-  <commander-version min="6.0" />
+  <commander-version min="10.3" />
   <depends min="1.4.0">EC-PluginManager</depends>
+  <depends min="1.7.0">EC-Git</depends>
   <description>Deploy your complete ElectricFlow DSL file structure to the server</description>
   <help>help.xml</help>
   <key>EC-DslDeploy</key>
   <label>EC-DslDeploy</label>
   <ecSupportLevel>10</ecSupportLevel>
-  <version>3.0.3</version>
+  <version>4.0.0</version>
   <hasAdoc>true</hasAdoc>
 
 <detailedDescription>CloudBees CD allows you to take a fully code-native approach to continuous delivery and release orchestration using the CloudBees CD Groovy-based DSL. The CloudBees CD model based approach means that every object in CloudBees CD, including release pipelines, deployment automation &amp; strategies, environments, configurations, application models, and more, are all backed by code.
