Tests ran on CD 10.4.0.153007

--- a/specs/environments/default/docker-compose.yml
+++ b/specs/environments/default/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   electric-flow:
-    image: "electricflow/efserver:latest"
+    image: "electricflow/efserver:full-CloudBeesFlow-x64-10.4.0.153077"
     ports:
       - "8000:8000"
       - "8443:8443"
