BEE-16752 - switch to a new git token and new cloudbees repository for tests

--- a/specs/environments/default/remote-secrets.env
+++ b/specs/environments/default/remote-secrets.env
@@ -5,3 +5,4 @@ GIT_PRIVATE_KEY_RAW=((GCP-SECRET: git-private-key-raw))
 GIT_PRIVATE_KEY_BASE64=((GCP-SECRET: git-private-key-base64))
 GIT_PASS_KEY_BASE64=((GCP-SECRET: git-pass-key-base64))
 GIT_PASS_PHRASE=((GCP-SECRET: git-pass-phrase))
+GIT_TOKEN_CLOUDBEES_CD_PLUGINS_BOT=((GCP-SECRET: git-token-cloudbees-cd-plugins-bot))
