--- a/specs/environments/default/docker-compose.yml
+++ b/specs/environments/default/docker-compose.yml
@@ -14,6 +14,9 @@ services:
     tty: true
     environment:
       - COMMANDER_SERVER=electricflow
+      - LC_ALL=en_US.UTF-8
+      - LANG=en_US.UTF-8
+      - LANGUAGE=en_US.UTF-8
 networks:
   internal:
     driver: bridge
