--- a/specs/environments/default/docker-compose.yml
+++ b/specs/environments/default/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 services:
   electric-flow:
-    hostname: "efserver"
-    image: "us-east1-docker.pkg.dev/cloudbees-artifact-registry/flow/plugin-specs/electricflow/efserver:latest"
+    image: "electricflow/efserver:latest"
     ports:
       - "8000:8000"
       - "8200:8200"
@@ -11,7 +10,7 @@ services:
       - "80:80"
     networks:
       - internal
-    container_name: efserver
+    container_name: electricflow
     tty: true
     environment:
       - COMMANDER_SERVER=electricflow
