[CDRO-6650]Migration to nexus3

--- a/specs/build.gradle
+++ b/specs/build.gradle
@@ -11,17 +11,8 @@ defaultTasks 'test'
 
 repositories {
     mavenLocal()
-    mavenCentral()
-
     maven {
-        url 'https://nexus-internal.cloudbees.com/content/repositories/snapshots'
-        credentials {
-            username = System.getenv('NEXUS_USERNAME') ?: nexusUsername
-            password = System.getenv('NEXUS_PASSWORD') ?: nexusPassword
-        }
-    }
-    maven {
-        url 'https://nexus-internal.cloudbees.com/content/groups/mirror'
+        url 'https://proxy.artifacts.cloudbees.com/repository/mirror'
         credentials {
             username = System.getenv('NEXUS_USERNAME') ?: nexusUsername
             password = System.getenv('NEXUS_PASSWORD') ?: nexusPassword
